# SoundLED

./: .gitignore  CMakeLists.txt  README.md
Prj/: .mxproject  Basic.ioc  CMakeLists.txt
Prj/CMake/: gcc_stm32.cmake  gcc_stm32f4.cmake
Prj/Inc/: mxconstants.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Prj/OpenOCD/: flash.cfg
Prj/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
